--- a/livedisplay/vendor.lineage.livedisplay-service.surya.rc
+++ b/livedisplay/vendor.lineage.livedisplay-service.surya.rc
@@ -2,7 +2,7 @@ on boot
     chown system system /sys/devices/platform/soc/soc:qcom,dsi-display/hbm
     chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display/hbm
 
-service vendor.livedisplay-hal-2-1 /vendor/bin/hw/vendor.lineage.livedisplay@2.1-service.surya
+service vendor.livedisplay-hal /vendor/bin/hw/vendor.lineage.livedisplay-service.surya
     class late_start
     user system
     group system
